--- a/population.ipynb
+++ b/population.ipynb
@@ -6,26 +6,27 @@
    "source": [
     "# And how many people live in your country?\n",
     "\n",
-    "Input (or paste) name of the countries in the left textbox, clik the button and population for each of the countries will (well, shall) be displayed in the right textbox.\n",
+    "- Input (or paste) the names of the countries in the left textbox so that each name is in its own row.\n",
+    "- Clik the button and population for each of the countries will (well, shall:) be displayed in the right textbox.\n",
     "\n",
-    "Example of valid input:\n",
+    "An example of valid input:\n",
     "\n",
-    "Belgium\n",
-    "Slovenia\n",
-    "Zimbabve\n",
+    "<b>Belgium\n",
+    "<b>Slovenia\n",
+    "<b>Zimbabwe\n",
     "\n",
     "<small>Population is retrieved using \"Determine total population for a given country on a given date\" service found here: http://api.population.io/#!/population/determineTotalPopulationByDate</small>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "16f8e25b50e44167a14554d146fafaed",
+       "model_id": "de9603a68c1f4c2b89a74f4c473993c1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -41,7 +42,7 @@
     "import ipywidgets as ipw\n",
     "import requests\n",
     "\n",
-    "countries = ipw.Textarea(placeholder=\"Give me some countries\", layout=ipw.Layout(width=\"150px\", height=\"250px\"))\n",
+    "countries = ipw.Textarea(placeholder=\"List country names, one in each row.\", layout=ipw.Layout(width=\"150px\", height=\"250px\"))\n",
     "people = ipw.Textarea(placeholder=\"\", layout=ipw.Layout(width=\"150px\", height=\"250px\"))\n",
     "\n",
     "def on_click(btn):\n",
@@ -52,7 +53,7 @@
     "            try:\n",
     "                people.value += (get_country_population(country) + '\\n')\n",
     "            except:\n",
-    "                people.value += (' At least one of the values could not be obtained. Check if you have correct country names.' + '\\n')\n",
+    "                people.value += (' At least one of the values could not be retrieved. Check if you have correct country names.' + '\\n')\n",
     "                return\n",
     "        else:\n",
     "            people.value += ('' + '\\n')\n",
@@ -74,7 +75,7 @@
     "    return btn\n",
     "\n",
     "row0 = ipw.HBox([countries, people])\n",
-    "row1 = ipw.HBox([mk_btn(\"Get popultation\")])\n",
+    "row1 = ipw.HBox([mk_btn(\"Get Population\")])\n",
     "\n",
     "ipw.VBox((row0, row1))"
    ]
