--- a/population.ipynb
+++ b/population.ipynb
@@ -7,15 +7,7 @@
     "# And how many people live in your country?\n",
     "\n",
     "- Input (or paste) the names of the countries in the left textbox so that each name is in its own row.\n",
-    "- Clik the button and population for each of the countries will (well, shall:) be displayed in the right textbox.\n",
-    "\n",
-    "An example of valid input:\n",
-    "\n",
-    "<b>Belgium\n",
-    "<b>Slovenia\n",
-    "<b>Zimbabwe\n",
-    "\n",
-    "<small>Population is retrieved using \"Determine total population for a given country on a given date\" service found here: http://api.population.io/#!/population/determineTotalPopulationByDate</small>"
+    "- Clik the button and population for each of the countries will (well, shall:) be displayed in the right textbox.\n"
    ]
   },
   {
@@ -26,7 +18,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "de9603a68c1f4c2b89a74f4c473993c1",
+       "model_id": "c0e186e4470243feb3d78e1c8a1c7f5c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -42,7 +34,7 @@
     "import ipywidgets as ipw\n",
     "import requests\n",
     "\n",
-    "countries = ipw.Textarea(placeholder=\"List country names, one in each row.\", layout=ipw.Layout(width=\"150px\", height=\"250px\"))\n",
+    "countries = ipw.Textarea(placeholder=\"Belgium\\nSlovenia\\nZimbabwe\", layout=ipw.Layout(width=\"150px\", height=\"250px\"))\n",
     "people = ipw.Textarea(placeholder=\"\", layout=ipw.Layout(width=\"150px\", height=\"250px\"))\n",
     "\n",
     "def on_click(btn):\n",
@@ -78,6 +70,13 @@
     "row1 = ipw.HBox([mk_btn(\"Get Population\")])\n",
     "\n",
     "ipw.VBox((row0, row1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<small>Population is retrieved using \"Determine total population for a given country on a given date\" service found here: http://api.population.io/#!/population/determineTotalPopulationByDate</small>"
    ]
   }
  ],
