Trying to match country names better.

--- a/population.ipynb
+++ b/population.ipynb
@@ -12,41 +12,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c0e186e4470243feb3d78e1c8a1c7f5c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "A Jupyter Widget"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import ipywidgets as ipw\n",
     "import requests\n",
     "\n",
-    "countries = ipw.Textarea(placeholder=\"Belgium\\nSlovenia\\nZimbabwe\", layout=ipw.Layout(width=\"150px\", height=\"250px\"))\n",
-    "people = ipw.Textarea(placeholder=\"\", layout=ipw.Layout(width=\"150px\", height=\"250px\"))\n",
+    "countries = ipw.Textarea(placeholder=\"Belgium\\nSlovenia\\nZimbabwe\", layout=ipw.Layout(width=\"300px\", height=\"250px\"))\n",
+    "people = ipw.Textarea(placeholder=\"\", layout=ipw.Layout(width=\"300px\", height=\"250px\"))\n",
     "\n",
-    "def on_click(btn):\n",
+    "def on_click(btn): \n",
+    "    #Get country names\n",
+    "    country_names = get_country_names()\n",
+    "    \n",
     "    people.value = ''\n",
     "    countries_split = countries.value.split('\\n')\n",
+    "    print('Replaced names:\\n')\n",
     "    for country in countries_split:\n",
     "        if country:\n",
     "            try:\n",
     "                people.value += (get_country_population(country) + '\\n')\n",
     "            except:\n",
-    "                people.value += (' At least one of the values could not be retrieved. Check if you have correct country names.' + '\\n')\n",
-    "                return\n",
+    "                try:\n",
+    "                    country = replace_name_from_list(country_names, country)\n",
+    "                    people.value += (get_country_population(country) + '\\n')\n",
+    "                except:\n",
+    "                    people.value += ('No Value' + '\\n')\n",
     "        else:\n",
     "            people.value += ('' + '\\n')\n",
     "        \n",
@@ -59,10 +51,33 @@
     "            print(r.status_code)\n",
     "        return population\n",
     "    except:\n",
-    "        people.value = \"ERROR\"\n",
+    "        return None\n",
+    "\n",
+    "def get_country_names():\n",
+    "    try:\n",
+    "        r = requests.get('http://api.population.io:80/1.0/countries')\n",
+    "        country_names = r.json()['countries']\n",
+    "        r.raise_for_status()\n",
+    "        if r.status_code != 200:\n",
+    "            print(r.status_code)\n",
+    "        return country_names\n",
+    "    except:\n",
+    "        return None\n",
+    "    \n",
+    "\n",
+    "def replace_name_from_list(service_names, given_name):\n",
+    "    \"\"\"\n",
+    "    Try to replace the country name with similar one from the list. If no similar name found in hte list, do nothing.\n",
+    "    \"\"\"\n",
+    "    for name in service_names:\n",
+    "        given_name1 = given_name.replace(\"&\", \"and\")\n",
+    "        given_name1 = given_name1[0:-2]\n",
+    "        if given_name1 in name:\n",
+    "            print(given_name + \" -> \" + name)\n",
+    "            return name   \n",
     "\n",
     "def mk_btn(description):\n",
-    "    btn = ipw.Button(description=description, layout=ipw.Layout(width=\"300px\"))\n",
+    "    btn = ipw.Button(description=description, layout=ipw.Layout(width=\"605px\"))\n",
     "    btn.on_click(on_click)\n",
     "    return btn\n",
     "\n",
